--- a/kviz-rijec-mjeseca/css/style.css
+++ b/kviz-rijec-mjeseca/css/style.css
@@ -7,6 +7,15 @@
     font-style: normal;
     font-display: swap;
 }
+
+@media (hover:none), 
+(hover:on-demand) {
+  nav a:hover { 
+    /* suppress hover effect on devices that don't support hover fully */
+    background: none;
+  }
+}
+
 .gla{font-family: 'FSGLA';text-shadow: 1px 1px 2px #c22626;}
 /* ----------------------------
 STYLES/LAYOUT
