--- a/kviz-rijec-mjeseca/css/style.css
+++ b/kviz-rijec-mjeseca/css/style.css
@@ -8,13 +8,25 @@
     font-display: swap;
 }
 
-@media (hover:none), 
-(hover:on-demand) {
-    .questions-page__answer-div:hover { 
-    /* suppress hover effect on devices that don't support hover fully */
-    background: none;
-  }
-}
+@supports (-webkit-touch-callout: none) {
+    .questions-page__answer-div:hover {
+        background: none;
+    }
+    
+    .questions-page__answer-div:hover li{
+        background: none;
+    }
+ }
+ 
+ @supports not (-webkit-touch-callout: none) {
+    .questions-page__answer-div:hover {
+        background: none;
+    }
+    
+    .questions-page__answer-div:hover li{
+        background: none;
+    }
+ }
 
 .gla{font-family: 'FSGLA';text-shadow: 1px 1px 2px #c22626;}
 /* ----------------------------
