--- a/kviz-rijec-mjeseca/css/style.css
+++ b/kviz-rijec-mjeseca/css/style.css
@@ -83,7 +83,7 @@ body {
 
 body {
     font-size: 1rem;
-    font-family: serif;
+    font-family: Garamond, serif;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: column;
@@ -260,10 +260,12 @@ form {
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
 }
+.lat{font-weight: 600;}
+.swal2-styled.swal2-confirm{font-family: Georgia, serif;}
 .questions-page__answer-list {
     padding: 0;
     list-style-type: none;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     line-height: 3rem;
     text-align: center;
     -webkit-touch-callout: none;
