--- a/kviz-rijec-mjeseca/css/style.css
+++ b/kviz-rijec-mjeseca/css/style.css
@@ -16,9 +16,12 @@ STYLES/LAYOUT
 
   #loader {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    margin-left: auto;
+margin-right: auto;
+left: 0;
+right: 0;
+
+
     z-index: 1;
     width: 120px;
     height: 120px;
