--- a/kviz-rijec-mjeseca/css/style.css
+++ b/kviz-rijec-mjeseca/css/style.css
@@ -8,7 +8,18 @@
     font-display: swap;
 }
 
-.gla{font-family: 'FSGLA';text-shadow: 1px 1px 2px #c22626;}
+
+@font-face {
+    font-family: 'EBGaramond';
+    src: url('../fonts/ebgaramond-variablefont_wght.woff2') format('woff2'),
+    url('../fonts/ebgaramond-variablefont_wght.woff') format('woff'),
+    url('../fonts/EBGaramond-VariableFont_wght.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+.gla{font-family: 'FSGLA'!important;text-shadow: 1px 1px 2px #c22626;}
 /* ----------------------------
 STYLES/LAYOUT
 ---------------------------- */
@@ -84,7 +95,7 @@ body {
 
 body {
     font-size: 1rem;
-    font-family: Garamond, serif;
+    font-family: "EBGaramond";
     color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: column;
@@ -410,7 +421,7 @@ hr.style-two {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 .definicija{font-size: 3rem;font-style: normal;}
-.uglata{width:80%}
+.uglata{width:80%;font-family: "EBGaramond";}
 /* ----------------------------
 MEDIA QUERIES
 ---------------------------- */
