--- a/kviz-sklonidba-imenica/css/style.css
+++ b/kviz-sklonidba-imenica/css/style.css
@@ -1,12 +1,3 @@
-@font-face {
-    font-family: 'FSGLA';
-    src: url('../fonts/FSGLAA.woff2') format('woff2'),
-        url('../fonts/FSGLAA.woff') format('woff'),
-        url('../fonts/FSGLAA.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
 
 
 @font-face {
@@ -19,7 +10,7 @@
     font-display: swap;
 }
 
-.gla{font-family: 'FSGLA'!important;text-shadow: 1px 1px 2px #c22626;}
+
 /* ----------------------------
 STYLES/LAYOUT
 ---------------------------- */
@@ -232,6 +223,7 @@ form {
     color: white;
     border-radius: 5px;
     transition: background-color 0.5s ease;
+    font-family: 'EBGaramond';
 }
 
 .senka {
@@ -422,6 +414,9 @@ hr.style-two {
 }
 .definicija{font-size: 3rem;font-style: normal;}
 .uglata{width:80%;font-family: "EBGaramond";}
+
+.muski, .zenski,.srednji,.sklonidba {display: none;}
+
 /* ----------------------------
 MEDIA QUERIES
 ---------------------------- */
