--- a/glagoljostrelka/css/style.css
+++ b/glagoljostrelka/css/style.css
@@ -3,6 +3,12 @@
   src: url(srednje.TTF);
 }
 
+@font-face {
+  font-family: FSGLA;
+  src: url('FSGLA.ttf'); /* provjeri da postoji u istom folderu ili promijeni path */
+}
+
+
 body {
   background: black;
   color: #f4f5f7;
@@ -34,6 +40,62 @@ body,html{height: 100%;  overflow-x: hidden;
 h1 {
   color: white;
 }
+
+#pismo-izbor {
+  width: 100%;
+  height: 100%;
+  background: #fefbf169;
+  z-index: 19999;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+}
+
+#pismo-izbor h2 {
+  margin-bottom: 25px;
+}
+
+#pismo-izbor .gumbi-container {
+  display: flex;
+  gap: 40px;
+  align-items: center; 
+  justify-content: center;
+}
+
+.pismo-gumb img {
+  width: 200px;
+  height: auto;
+  border-radius: 12px;
+  border: 3px solid transparent;
+  transition: 0.3s ease;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+.pismo-gumb {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  outline: none;
+}
+.pismo-gumb:hover img {
+  transform: scale(1.05);
+  border-color: #f1c40f;
+}
+.pismo-opcija {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
+
+.pismo-natpis {
+  margin-top: 5px;
+  font-size: 18px;
+}
+.pismo-opcija:nth-of-type(1) .pismo-natpis {
+  font-family: 'FSGLA', serif;
+}  
 
 #game-wrap canvas {
   border: 1px solid #666;
