--- a/glagoljostrelka/css/style.css
+++ b/glagoljostrelka/css/style.css
@@ -49,6 +49,7 @@ h1 {
   justify-content: center;
   align-items: center;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+  letter-spacing: 0.09em;
 }
 
 #pismo-izbor h2 {
