--- a/sudoku/style.css
+++ b/sudoku/style.css
@@ -30,6 +30,7 @@ body {
   background: url("pozadina.jpg") no-repeat center center;
   background-size: cover; /* proširi cijelu sliku */
   position: relative;
+  overflow-y: hidden;
 }
 
 body::before {
