--- a/kviz-zivotinje/css/style.css
+++ b/kviz-zivotinje/css/style.css
@@ -19,7 +19,7 @@
     font-display: swap;
 }
 
-.gla{font-family: 'FSGLA'!important;text-shadow: 1px 1px 2px #c22626;}
+.gla{font-family: 'FSGLA'!important;}
 /* ----------------------------
 STYLES/LAYOUT
 ---------------------------- */
