--- a/solitaire/style.css
+++ b/solitaire/style.css
@@ -10,10 +10,12 @@
 }
 
 body{
-  background: #1d9325;
-  background: -moz-radial-gradient(center, ellipse cover, #1d9325 0%, #17752d 57%, #013a01 100%);
-  background: -webkit-radial-gradient(center, ellipse cover, #1d9325 0%,#17752d 57%,#013a01 100%);
-  background: radial-gradient(ellipse at center, #1d9325 0%,#17752d 57%,#013a01 100%);
+   background:
+    radial-gradient(circle at 20% 30%, rgba(0,0,0,0.06), transparent 40%),
+    radial-gradient(circle at 80% 70%, rgba(0,0,0,0.08), transparent 45%),
+    url("pozadina.jpg");
+  background-size: cover;
+  background-position: center;
   height:100vh;
   margin:0;
   font-size:1vw;
@@ -21,7 +23,20 @@ body{
   overflow:hidden;
   cursor:default;
 }
+body{
+  position: relative;
+}
 
+body::before{
+  content:"";
+  position: fixed;
+  inset: 0;
+  pointer-events: none;
+  box-shadow:
+    inset 0 0 8em rgba(0,0,0,0.45),
+    inset 0 0 3em rgba(0,0,0,0.25);
+  z-index: 0;
+}
 #header{
   position:absolute;
   width:100%;
@@ -203,7 +218,7 @@ body[expanded="true"] #gameinfo{
 }
 
 .card.bottom{
-  border:0.4em solid rgba(255,255,255,0.3);
+  border:0.4em solid rgba(236, 21, 21, 0.3);
   pointer-events:none !important;
 }
 
@@ -369,7 +384,7 @@ svg{
 
 .card.bottom path {
   fill: none;
-  stroke: white;
+  stroke: rgb(87, 5, 5);
   stroke-width: 1.8;
 }
 
